[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors = [ "Sam De Roeck <sadroeck@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", features = ["derive"] }
fastrand = "1.7"
futures-util = "0.3"
hex = "0.4"
m10-sdk = "0.21"
rust_decimal = { version = "1.25", features = ["serde"] }
serde_json = "1.0"
tokio = { version = "1.20", features = ["rt"] }
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.1", features = ["v4"] }

service = { path = "../service" }
