[package]
name = "service"
version = "0.1.0"
edition = "2021"
authors = [ "Sam De Roeck <sadroeck@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
config = "0.13"
futures-util = "0.3"
hex = "0.4"
m10-sdk = { path = "../../mono/shared/rust/sdk" }
serde = "1.0"
serde_json = "1.0"
rust_decimal = {  version = "1.25", features = [ "serde" ] }
tokio = { version = "1.20", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
